# trie

./: .gitignore  Trie.hs  trie.cabal
app/: Main.hs
src/: Trie.hs
test/: TrieTests.hs
