cabal-version: 2.4
name: trie
version: 1.0

author:             Ivan Boldyrev
maintainer:         lispnik@gmail.com

library
   exposed-modules: Trie
   build-depends: base > 4
   hs-source-dirs: src
   ghc-options: -Wall
   default-language: Haskell2010

executable trie
   main-is: Main.hs
   build-depends:
       base > 4,
       bytestring,
       trie
   hs-source-dirs: app
   ghc-options: -Wall
   default-language: Haskell2010

Test-Suite test-Trie
   type: exitcode-stdio-1.0
   hs-source-dirs: test
   main-is: TrieTests.hs
   default-language: Haskell2010
   build-depends: base > 4, HUnit, trie
